[package]
name = "smoltcp-tritium-can"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bitfield = "0.14.0"
bitflags = "2.4.2"
defmt = { version = "0.3.6", optional = true }
embedded-can = "0.4.1"
smoltcp = { version = "0.11.0", default-features = false, features = [
    "socket-tcp",
    "socket-udp",
    "proto-ipv4",
    "medium-ethernet",
] }

[features]
default = ["server", "client"]

client = ["client-tcp", "client-udp"]
client-tcp = []
client-udp = []

server = ["server-tcp", "server-udp"]
server-tcp = []
server-udp = []

defmt-03 = ["dep:defmt", "smoltcp/defmt"]
