[package]
name = "smoltcp-tritium"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bitfield = "0.14"
bitflags = "2.4"
defmt = { version = "0.3", optional = true }
embedded-can = "0.4"
smoltcp = { version = "0.11", default-features = false, features = [
    "socket-tcp",
    "socket-udp",
    "proto-ipv4",
    "medium-ethernet",
] }

[features]
defmt-03 = ["dep:defmt", "smoltcp/defmt"]
