[package]
name = "tritiumcan-smoltcp"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"

[dependencies]
tritiumcan = { path = "../tritiumcan" }
bitfield = "0.14"
bitflags = "2.4"
defmt = { version = "0.3", optional = true }
embedded-can = { workspace = true }
smoltcp = { version = "0.11", default-features = false, features = [
    "socket-tcp",
    "socket-udp",
    "proto-ipv4",
    "medium-ethernet",
] }
zerocopy = { version = "0.7.34", features = ["derive"] }

[features]
defmt-03 = ["dep:defmt", "smoltcp/defmt", "tritiumcan/defmt-03"]
async = ["smoltcp/async"]
